<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/main_group">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/label_home" />

        <item
            android:id="@+id/invoicesFragment"
            android:icon="@drawable/ic_invoice_document"
            android:title="@string/label_invoices" />

        <item
            android:id="@+id/rentalInfoFragment"
            android:icon="@drawable/ic_apartment"
            android:title="@string/label_my_rental" />

        <item
            android:id="@+id/notificationsFragment"
            android:icon="@drawable/ic_notifications"
            android:title="@string/label_notifications" />

        <item
            android:id="@+id/paymentHistoryFragment"
            android:icon="@drawable/ic_payment_history"
            android:title="@string/label_payment_history" />

        <item
            android:id="@+id/queriesFragment"
            android:icon="@drawable/ic_chat"
            android:title="@string/label_queries" />
    </group>

    <divider android:id="@+id/divider1" />

    <group android:id="@+id/secondary_group">
        <item
            android:id="@+id/accountSettingsFragment"
            android:icon="@drawable/ic_person"
            android:title="@string/label_account_settings" />

        <item
            android:id="@+id/logoutItem"
            android:icon="@drawable/ic_logout"
            android:title="@string/btn_logout" />
    </group>

</menu>
