<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <!-- Auth screens -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.tenantpro.app.ui.auth.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Forgot Password screen -->
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.tenantpro.app.ui.auth.ForgotPasswordFragment"
        android:label="Forgot Password"
        tools:layout="@layout/fragment_forgot_password">

        <action
            android:id="@+id/action_forgotPasswordFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/forgotPasswordFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Registration screen -->
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.tenantpro.app.ui.auth.RegisterFragment"
        android:label="@string/create_account"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Main screens -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.tenantpro.app.ui.home.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_invoicesFragment"
            app:destination="@id/invoicesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/invoicesFragment"
        android:name="com.tenantpro.app.ui.invoices.InvoicesFragment"
        android:label="@string/label_invoices"
        tools:layout="@layout/fragment_invoices">

        <action
            android:id="@+id/action_invoicesFragment_to_paymentFragment"
            app:destination="@id/paymentFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_invoicesFragment_to_paymentHistoryFragment"
            app:destination="@id/paymentHistoryFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_invoicesFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/rentalInfoFragment"
        android:name="com.tenantpro.app.ui.rental.RentalInfoFragment"
        android:label="@string/label_my_rental"
        tools:layout="@layout/fragment_rental_info" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.tenantpro.app.ui.notifications.NotificationsFragment"
        android:label="@string/label_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/maintenanceFragment"
        android:name="com.tenantpro.app.ui.maintenance.MaintenanceFragment"
        android:label="@string/label_maintenance"
        tools:layout="@layout/fragment_maintenance" />

    <fragment
        android:id="@+id/queriesFragment"
        android:name="com.tenantpro.app.ui.queries.QueriesFragment"
        android:label="@string/label_queries"
        tools:layout="@layout/fragment_queries" />

    <fragment
        android:id="@+id/accountSettingsFragment"
        android:name="com.tenantpro.app.ui.account.AccountSettingsFragment"
        android:label="@string/label_account_settings"
        tools:layout="@layout/fragment_account_settings" />

    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.tenantpro.app.ui.payment.PaymentFragment"
        android:label="@string/label_pay"
        tools:layout="@layout/fragment_payment">

        <argument android:name="invoiceId"       app:argType="string" />
        <argument android:name="invoiceLabel"    app:argType="string" />
        <argument android:name="remainingAmount" app:argType="float" />
    </fragment>

    <fragment
        android:id="@+id/paymentHistoryFragment"
        android:name="com.tenantpro.app.ui.history.PaymentHistoryFragment"
        android:label="@string/label_payment_history"
        tools:layout="@layout/fragment_payment_history">

        <argument android:name="invoiceId"    app:argType="string" />
        <argument android:name="invoiceLabel" app:argType="string" />
    </fragment>

</navigation>
